--- a/requirements.txt
+++ b/requirements.txt
@@ -1,119 +1,10 @@
-astroid==2.12.9
-asttokens==2.0.5
-backcall==0.2.0
-black==22.8.0
-Bottleneck==1.3.2
-brotlipy==0.7.0
-bx-python==0.8.13
-certifi==2021.10.8
-cffi==1.14.6
-chardet==4.0.0
-click==8.1.3
-cloudpickle==2.0.0
-conda==4.10.3
-conda-package-handling==1.7.3
-CrossMap==0.6.3
-cryptography==3.4.7
-cycler==0.11.0
-Cython==0.29.28
-dask==2021.9.1
-debugpy==1.6.0
-decorator==5.1.1
-dill==0.3.5.1
-dpcpp-cpp-rt==2022.0.1
-entrypoints==0.4
-et-xmlfile==1.1.0
-executing==0.8.3
-fonttools==4.28.5
-fsspec==2022.1.0
-gitdb==4.0.9
-GitPython==3.1.27
-idna==2.10
-intel-cmplr-lib-rt==2022.0.1
-intel-cmplr-lic-rt==2022.0.1
-intel-opencl-rt==2022.0.1
-intel-openmp==2022.0.1
-ipykernel==6.13.0
-ipython==8.2.0
-isort==5.10.1
-jedi==0.18.1
-joblib==1.1.0
-jupyter-client==7.2.2
-jupyter-core==4.10.0
-kiwisolver==1.3.2
-lazy-object-proxy==1.7.1
-locket==0.2.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-matplotlib-venn==0.11.7
-mccabe==0.7.0
-mkl==2022.0.1
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-mypy-extensions==0.4.3
-nest-asyncio==1.5.5
-numexpr==2.7.3
-numpy==1.21.5
-openpyxl==3.0.9
-packaging==21.3
+matplotlib
+numpy
 pandas==1.3.5
-parso==0.8.3
-partd==1.2.0
-pathspec==0.10.1
-pathvalidate==2.5.0
-pbr==5.8.0
-pexpect==4.8.0
-pgi==0.0.11.2
-pickleshare==0.7.5
-Pillow==9.0.0
-pip==22.2.2
-platformdirs==2.5.2
-prompt-toolkit==3.0.29
-psutil==5.9.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyBigWig==0.3.18
-pycairo==1.21.0
-pycosat==0.6.3
-pycparser==2.20
-Pygments==2.12.0
-PyGObject==3.42.2
-pylint==2.15.2
-pyOpenSSL==20.0.1
-pyparsing==3.0.6
-pysam==0.19.0
-PySocks==1.7.1
-python-dateutil==2.8.2
-python-xlib==0.31
-pytz==2021.3
-pyxdg==0.28
-pyxlsb==1.0.9
-PyYAML==6.0
-pyzmq==22.3.0
-requests==2.25.1
-ruamel-yaml-conda==0.15.100
-scikit-allel==1.3.5
-scikit-learn==1.0.2
-scipy==1.7.3
-seaborn==0.11.2
-setuptools==52.0.0.post20210125
-six==1.16.0
-smmap==5.0.0
-stack-data==0.2.0
-tbb==2021.4.0
-testresources==2.0.1
-threadpoolctl==3.0.0
-tomli==2.0.1
-tomlkit==0.11.4
-toolz==0.11.2
-tornado==6.1
-tqdm==4.61.2
-traitlets==5.1.1
-typing_extensions==4.3.0
-urllib3==1.26.6
-wcwidth==0.2.5
-websocket-client==1.4.1
-wheel==0.36.2
-wrapt==1.14.1
-xlrd==2.0.1
+pysam
+scipy
+scikit-allel
+scikit-learn
+seaborn
+tbb
+tqdm
